tests/errors/test-inheritance-invalid-base.script

class A : B {};

//>2:11: error C27: invalid base class.
